chore: auth system added
